--- a/css/spirograph.css
+++ b/css/spirograph.css
@@ -31,11 +31,14 @@ div {
 	font-weight: bold;
 }
 
-#canvasContainer {
+#spirograph {
     position: relative;
-	
+    margin: 20px;
+	width: 500px;
+	height:500px;
+	margin: 20px; 
+	float:left;
 }
-
 #controlContainer {
     position: relative;
 }
